css/conditionals/event/admission-event-detail.css
.node-admission-event.view-mode-full .field-name-field-register-url a:after, .node-admission-event.view-mode-full .field-name-field-link-event-more-info a:after {
  font-size: 21px;
  font-weight: normal;
  line-height: 0;
  margin-top: -10px;
  position: absolute;
  right: 12px;
  top: 50%;
}

.node-admission-event.view-mode-full .field-name-field-register-url {
  background: #c50000;
  background: -moz-linear-gradient(bottom, #c50000, #860000);
  background: -o-linear-gradient(bottom, #c50000, #860000);
  background: -webkit-linear-gradient(bottom, #c50000, #860000);
  background: linear-gradient(to top, #c50000, #860000);
  -moz-box-shadow: black, 0.45, 1px 1px 1px;
  -webkit-box-shadow: black, 0.45, 1px 1px 1px;
  box-shadow: black, 0.45, 1px 1px 1px;
  margin-bottom: 12px;
  padding: 14px 26px 11px 26px;
}
.node-admission-event.view-mode-full .field-name-field-register-url a {
  color: white;
  display: block;
  font-size: 20px;
  line-height: 1.2;
  position: relative;
}
.node-admission-event.view-mode-full .field-name-field-register-url a:after {
  content: "\f101";
  display: inline;
  speak: none;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-smoothing: antialiased;
  text-transform: none;
  line-height: 1;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  font-family: 'icons';
}
.node-admission-event.view-mode-full .field-name-field-register-url a:after {
  right: 0;
  color: white;
}
.node-admission-event.view-mode-full .field-name-field-register-url:hover {
  background: #2c627c;
  background: -moz-linear-gradient(#194560, #2c6180);
  background: -o-linear-gradient(#194560, #2c6180);
  background: -webkit-linear-gradient(#194560, #2c6180);
  background: linear-gradient(#194560, #2c6180);
}
.node-admission-event.view-mode-full .field-name-field-register-url:hover a:after {
  color: white;
}

.node-admission-event.view-mode-full .field-name-field-link-event-more-info {
  margin-bottom: 12px;
  padding: 14px 26px 11px 26px;
}
.node-admission-event.view-mode-full .field-name-field-link-event-more-info a {
  color: #636f00;
  display: block;
  font-size: 20px;
  line-height: 1.2;
  position: relative;
}
.node-admission-event.view-mode-full .field-name-field-link-event-more-info a:after {
  content: "\f101";
  display: inline;
  speak: none;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  font-smoothing: antialiased;
  text-transform: none;
  line-height: 1;
  font-style: normal;
  font-variant: normal;
  font-weight: normal;
  font-family: 'icons';
}
.node-admission-event.view-mode-full .field-name-field-link-event-more-info a:after {
  right: 0;
  color: #c2b7a1;
}
.node-admission-event.view-mode-full .field-name-field-link-event-more-info a:hover {
  color: #2d6280;
}
.node-admission-event.view-mode-full .field-name-field-link-event-more-info a:hover:after {
  color: #aac4bf;
}

.node-admission-event.view-mode-full .field-name-field-link-event-more-info {
  background-color: #f9f9f9;
  background: -moz-linear-gradient(bottom, #f9f9f9 20%, #ffffff 100%);
  background: -o-linear-gradient(bottom, #f9f9f9 20%, #ffffff 100%);
  background: -webkit-linear-gradient(bottom, #f9f9f9 20%, #ffffff 100%);
  background: linear-gradient(to top, #f9f9f9 20%, #ffffff 100%);
}

.node-admission-event.view-mode-full .field-name-field-body, .node-admission-event.view-mode-full .field-name-field-event-location, .node-admission-event.view-mode-full .field-name-field-schedule {
  border-top: 1px lightgray solid;
}

.node-admission-event.view-mode-full .field-name-field-event-speakers {
  border-bottom: 1px lightgray solid;
}

.node-admission-event.view-mode-full .field-name-field-link-event-more-info {
  border: 2px white solid;
}

.node-admission-event.view-mode-full {
  border-top: 3px #231f20 solid;
}

.node-admission-event.view-mode-full .field-name-field-link-event-more-info {
  -moz-box-shadow: rgba(0, 0, 0, 0.1) 0 1px 0, rgba(0, 0, 0, 0.1) 0 0 0 1px;
  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0 1px 0, rgba(0, 0, 0, 0.1) 0 0 0 1px;
  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 0, rgba(0, 0, 0, 0.1) 0 0 0 1px;
  margin: 1px;
}

.ie8 .node-admission-event.view-mode-full .field-name-field-link-event-more-info, .node-admission-event.view-mode-full .ie8 .field-name-field-link-event-more-info {
  border: 1px #cccccc solid !important;
  margin-left: 0 !important;
  margin-right: 0 !important;
}

.node-type-admission-event #page-title {
  display: none;
}

.node-admission-event.view-mode-full {
  padding: 26px;
  padding-bottom: 0;
}
@media (max-width: 35.5em) {
  .node-admission-event.view-mode-full {
    border-top: 0;
  }
}
.node-admission-event.view-mode-full .group-wrapper-date {
  margin-bottom: 26px;
}
.node-admission-event.view-mode-full .field-name-field-event-date {
  display: inline;
  font-family: "NewsGothicBT-Demi", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 18px;
  font-weight: normal;
  line-height: 1.3;
}
@media (max-width: 35.5em) {
  .node-admission-event.view-mode-full .field-name-field-event-date {
    font-size: 16px;
  }
}
.node-admission-event.view-mode-full .split-date-time {
  display: inline;
}
.node-admission-event.view-mode-full .time {
  display: inline-block;
  margin-right: 5px;
}
.node-admission-event.view-mode-full .field-name-field-time-zone {
  font-family: "NewsGothicBT-Demi", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 18px;
  font-weight: normal;
  line-height: 1.3;
}
.node-admission-event.view-mode-full .field-name-title {
  margin-bottom: 18px;
}
.node-admission-event.view-mode-full .field-name-title h1 {
  font-family: "NewsGothicBT", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 28px;
  font-weight: bold;
  line-height: 1.3;
}
@media (max-width: 35.5em) {
  .node-admission-event.view-mode-full .field-name-title h1 {
    font-size: 26px;
  }
}
.node-admission-event.view-mode-full .field-name-field-editorial-summary {
  font-size: 24px;
  font-weight: normal;
  line-height: 1.3;
  margin-bottom: 18px;
}
@media (max-width: 35.5em) {
  .node-admission-event.view-mode-full .field-name-field-editorial-summary {
    font-size: 18px;
  }
}
.node-admission-event.view-mode-full .location-teaser {
  font-family: "NewsGothicBT-Demi", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 18px;
  font-weight: normal;
  line-height: 1.3;
}
@media (max-width: 35.5em) {
  .node-admission-event.view-mode-full .location-teaser {
    font-size: 16px;
  }
}
.node-admission-event.view-mode-full .location-anchor a {
  color: #636f00;
  font-family: "NewsGothicBT-Demi", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 18px;
  font-weight: normal;
  line-height: 1.3;
}
@media (max-width: 35.5em) {
  .node-admission-event.view-mode-full .location-anchor a {
    font-size: 16px;
  }
}
.node-admission-event.view-mode-full .location-anchor a:hover {
  color: #2d6280;
}
.node-admission-event.view-mode-full .field-name-field-body {
  margin-top: 26px;
  margin-bottom: 26px;
  padding-top: 26px;
}
.node-admission-event.view-mode-full h2.label-above {
  color: #231f20;
  font-family: "NewsGothicBT", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 24px;
  font-weight: bold;
  line-height: 1.3;
  margin-bottom: 12px;
}
.node-admission-event.view-mode-full h3.label-above {
  color: #231f20;
  font-family: "NewsGothicBT", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 20px;
  font-weight: bold;
  line-height: 1.3;
  margin-bottom: 8px;
}
.node-admission-event.view-mode-full .field-name-field-event-speakers {
  margin-bottom: 26px;
  padding-bottom: 26px;
}
.node-admission-event.view-mode-full .field-name-field-event-speakers .field-name-field-description {
  margin-top: 8px;
}
.node-admission-event.view-mode-full .field-collection-item-field-event-speakers {
  font-size: 18px;
  line-height: 1.3;
  margin-bottom: 26px;
}
@media (max-width: 35.5em) {
  .node-admission-event.view-mode-full .field-collection-item-field-event-speakers {
    font-size: 16px;
  }
}
.node-admission-event.view-mode-full .field-collection-item-field-event-speakers .field-type-image {
  display: none;
}
.node-admission-event.view-mode-full .field-collection-item-field-event-speakers a {
  color: #636f00;
}
.node-admission-event.view-mode-full .field-collection-item-field-event-speakers a:hover {
  color: #2d6280;
}
.node-admission-event.view-mode-full .field-collection-item-field-event-speakers .field-name-title,
.node-admission-event.view-mode-full .field-collection-item-field-event-speakers h3,
.node-admission-event.view-mode-full .field-collection-item-field-event-speakers .field-name-field-link-single {
  color: #231f20;
  font-family: "NewsGothicBT", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 20px;
  font-weight: bold;
  line-height: 1.3;
  margin-bottom: 4px;
}
.node-admission-event.view-mode-full .field-collection-item-field-event-speakers:last-of-type {
  margin-bottom: 0;
}
.node-admission-event.view-mode-full .field-name-field-date-time {
  margin-bottom: 12px;
}
.node-admission-event.view-mode-full .field-name-field-date-time .date-display-single {
  font-size: 18px;
  line-height: 1.3;
}
@media (max-width: 35.5em) {
  .node-admission-event.view-mode-full .field-name-field-date-time .date-display-single {
    font-size: 16px;
  }
}
.node-admission-event.view-mode-full .field-name-field-register-url {
  max-width: 350px;
  width: 100%;
}
.node-admission-event.view-mode-full .field-name-field-link-event-more-info {
  max-width: 350px;
  width: 100%;
}
.node-admission-event.view-mode-full .field-name-field-event-location {
  margin-top: 26px;
  padding-top: 26px;
}
.node-admission-event.view-mode-full .field-collection-item-field-event-location {
  font-size: 18px;
  line-height: 1.3;
  margin-bottom: 8px;
}
@media (max-width: 35.5em) {
  .node-admission-event.view-mode-full .field-collection-item-field-event-location {
    font-size: 16px;
  }
}
.node-admission-event.view-mode-full .field-collection-item-field-event-location:last-of-type {
  margin-bottom: 0;
}
.node-admission-event.view-mode-full .field-name-field-event-location-type {
  font-weight: bold;
  margin-bottom: 4px;
}
.node-admission-event.view-mode-full .field-name-field-link-map {
  font-family: "NewsGothicBT-Demi", "Avant Garde", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
}
.node-admission-event.view-mode-full .field-name-field-link-map a {
  color: #636f00;
}
.node-admission-event.view-mode-full .field-name-field-link-map a:hover {
  color: #2d6280;
}
.node-admission-event.view-mode-full .field-name-field-schedule {
  margin-top: 26px;
  padding-top: 26px;
}

